Fixes content overflow situations

--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -55,6 +55,8 @@
 
   @media (min-width: @desktop-width) {
     top: 1px;
+    box-sizing: border-box;
+    max-width: 700px;
     margin-bottom: 0;
     padding-top: 0;
     padding-left: 270px;
