--- a/source/less/blocks/country-card.less
+++ b/source/less/blocks/country-card.less
@@ -43,7 +43,7 @@
   display: grid;
   grid-template-areas: "name count"
     "slogan count";
-  grid-template-columns: 2fr 83px;
+  grid-template-columns: 187px 83px;
   background-color: @white;
   border-radius: 10px;
 
