--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -48,6 +48,11 @@
 
   @media (min-width: @tablet-width) {
     margin: 0;
+    margin-right: 10px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-right: 45px;
   }
 }
 
@@ -56,10 +61,10 @@
 
   @media (min-width: @tablet-width) {
     margin: 0;
-    margin-right: 10px;
+    margin-right: 20px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-right: 45px;
+    margin-right: 90px;
   }
 }
